; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/events/intel/extr_uncore_snbep.c_snbep_uncore_pci_init.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/events/intel/extr_uncore_snbep.c_snbep_uncore_pci_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SNBEP_CPUNODEID = common dso_local global i32 0, align 4
@SNBEP_GIDNIDMAP = common dso_local global i32 0, align 4
@snbep_pci_uncores = common dso_local global i32 0, align 4
@uncore_pci_uncores = common dso_local global i32 0, align 4
@snbep_uncore_pci_driver = common dso_local global i32 0, align 4
@uncore_pci_driver = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @snbep_uncore_pci_init() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @SNBEP_CPUNODEID, align 4
  %4 = load i32, i32* @SNBEP_GIDNIDMAP, align 4
  %5 = call i32 @snbep_pci2phy_map_init(i32 15584, i32 %3, i32 %4, i32 1)
  store i32 %5, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %0
  %9 = load i32, i32* %2, align 4
  store i32 %9, i32* %1, align 4
  br label %12

10:                                               ; preds = %0
  %11 = load i32, i32* @snbep_pci_uncores, align 4
  store i32 %11, i32* @uncore_pci_uncores, align 4
  store i32* @snbep_uncore_pci_driver, i32** @uncore_pci_driver, align 8
  store i32 0, i32* %1, align 4
  br label %12

12:                                               ; preds = %10, %8
  %13 = load i32, i32* %1, align 4
  ret i32 %13
}

declare dso_local i32 @snbep_pci2phy_map_init(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
